[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nanalib"
# バージョンは Cargo.toml の version と自動同期される
dynamic = ["version"]
description = "High-performance SQL sanitization utilities for NanaSQLite"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]